--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -9,6 +9,7 @@
     "isolatedModules": false,                        /* Transpile each file as a separate module (similar to 'ts.transpileModule'). */
     "noImplicitAny": true,                          /* Raise error on expressions and declarations with an implied 'any' type. */
     "strictNullChecks": true,                       /* Enable strict null checks. */
+    "strictFunctionTypes": true,
     "moduleResolution": "node",                     /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
     "baseUrl": "./",                                /* Base directory to resolve non-absolute module names. */
     "downlevelIteration": false,
