--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "workspaces": [
     "packages/*"
   ],
-  "packageManager": "yarn@3.2.1",
+  "packageManager": "yarn@3.2.4",
   "engines": {
-    "node": ">=14.0.0",
+    "node": "^16.0.0",
     "npm": "Please use yarn instead of NPM to install dependencies"
   },
   "scripts": {
