--- a/docs/package.json
+++ b/docs/package.json
@@ -1,7 +1,7 @@
 {
   "private": "true",
   "engines": {
-    "node": ">=14.0.0",
+    "node": "^16.0.0",
     "npm": "Please use yarn instead of NPM to install dependencies"
   },
   "scripts": {
@@ -14,7 +14,7 @@
   },
   "devDependencies": {
     "@microsoft/tsdoc": "^0.13.0",
-    "@types/node": "^12.6.8",
+    "@types/node": "^16.18.0",
     "ts-morph": "^10.0.2",
     "ts-node": "^8.0.2",
     "typescript": "^4.1.2",
