docs(ioc): update documentation to reflect new api

--- a/.eslintrc
+++ b/.eslintrc
@@ -20,15 +20,6 @@
     "@typescript-eslint/no-unused-vars": [
       "error", { "argsIgnorePattern": "^_" }
     ],
-    "@typescript-eslint/no-non-null-assertion": "off",
-    "@typescript-eslint/naming-convention": [
-      "error",
-      {
-        "selector": "memberLike",
-        "modifiers": ["private"],
-        "format": ["camelCase"],
-        "leadingUnderscore": "require"
-      }
-    ]
+    "@typescript-eslint/no-non-null-assertion": "off"
   }
 }
