feat(config): add --passWithNoTests for config-ssm

--- a/packages/config-ssm/package.json
+++ b/packages/config-ssm/package.json
@@ -30,7 +30,7 @@
   },
   "homepage": "https://github.com/neoxia/apoyo/tree/master/packages/config-ssm",
   "scripts": {
-    "test": "jest --verbose --runInBand",
+    "test": "jest --verbose --runInBand --passWithNoTests",
     "build": "tsup"
   },
   "devDependencies": {
