--- a/packages/scaffold/package.json
+++ b/packages/scaffold/package.json
@@ -49,7 +49,9 @@
     "access": "public"
   },
   "dependencies": {
+    "change-case": "^4.1.2",
     "ejs": "^3.1.9",
-    "glob": "^9.3.2"
+    "glob": "^9.3.2",
+    "inflection": "^2.0.1"
   }
 }
