--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -30,6 +30,6 @@ jobs:
       - run: yarn build
 
       - run: docker-compose up -d
-      - run: yarn test
+      - run: yarn test-affected
       - run: docker-compose down
 
