--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "yarn run eslint --ext ts,tsx .",
     "lint:fix": "yarn run eslint --fix --ext ts,tsx .",
     "test": "yarn lint && yarn workspaces foreach --no-private run test",
+    "test-affected": "yarn lint && yarn jill each test --no-private --affected origin/master -- --runInBand",
     "build": "yarn jill each build --no-private",
     "postinstall": "husky install"
   },
