--- a/packages/scaffold/package.json
+++ b/packages/scaffold/package.json
@@ -34,6 +34,7 @@
     "build": "tsup"
   },
   "devDependencies": {
+    "@apoyo/std": "0.0.15",
     "@types/ejs": "^3.1.2",
     "@types/jest": "^26.0.23",
     "@types/node": "^16.18.0",
@@ -44,6 +45,9 @@
     "ts-node": "^8.0.2",
     "tsup": "^6.1.2",
     "typescript": "^4.7.4"
+  },
+  "peerDependencies": {
+    "@apoyo/std": "0.0.15"
   },
   "publishConfig": {
     "access": "public"
