--- a/packages/csv/package.json
+++ b/packages/csv/package.json
@@ -33,7 +33,7 @@
   },
   "homepage": "https://github.com/neoxia/apoyo/tree/master/packages/csv",
   "scripts": {
-    "test": "jest --verbose --runInBand",
+    "test": "jest --runInBand",
     "build": "tsup"
   },
   "dependencies": {
