--- a/packages/config-aws/package.json
+++ b/packages/config-aws/package.json
@@ -30,7 +30,7 @@
   },
   "homepage": "https://github.com/neoxia/apoyo/tree/master/packages/config-aws",
   "scripts": {
-    "test": "jest --verbose --runInBand --passWithNoTests",
+    "test": "jest --runInBand --passWithNoTests",
     "build": "tsup"
   },
   "devDependencies": {
