--- a/packages/decoders/package.json
+++ b/packages/decoders/package.json
@@ -32,7 +32,7 @@
   },
   "homepage": "https://github.com/neoxia/apoyo/tree/master/packages/decoders",
   "scripts": {
-    "test": "jest --verbose --runInBand",
+    "test": "jest --runInBand",
     "build": "tsup"
   },
   "devDependencies": {
