--- a/packages/std/package.json
+++ b/packages/std/package.json
@@ -34,7 +34,7 @@
   },
   "homepage": "https://github.com/neoxia/apoyo/tree/master/packages/std",
   "scripts": {
-    "test": "jest --verbose --runInBand",
+    "test": "jest --runInBand",
     "build": "tsup"
   },
   "devDependencies": {
