--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -28,11 +28,16 @@ jobs:
       - run: yarn install --immutable
 
       - run: yarn lint
-      - run: yarn build
+
+      - name: Build affected packages
+        run: |
+          git fetch origin master
+          yarn jill each build --no-private --affected origin/master
 
       - run: docker-compose up -d
 
-      - run: |
+      - name: Test affected packages
+        run: |
           git fetch origin master
           yarn jill each test --no-private --affected origin/master
 
