--- a/packages/jwt-cognito/package.json
+++ b/packages/jwt-cognito/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@apoyo/jwt",
+  "name": "@apoyo/jwt-cognito",
   "version": "0.0.1",
-  "description": "Utils and abstractions focused around JWTs",
+  "description": "JWT driver for Cognito user pools",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "typings": "dist/index.d.ts",
@@ -26,15 +26,15 @@
     "type": "git",
     "url": "https://github.com/neoxia/apoyo"
   },
-  "homepage": "https://github.com/neoxia/apoyo/tree/master/packages/jwt",
+  "homepage": "https://github.com/neoxia/apoyo/tree/master/packages/jwt-cognito",
   "scripts": {
     "test": "jest --runInBand --passWithNoTests",
     "build": "tsup"
   },
   "devDependencies": {
+    "@apoyo/jwt": "^0.0.1",
     "@apoyo/std": "^0.0.15",
     "@types/jest": "^26.0.23",
-    "@types/jsonwebtoken": "^9",
     "@types/node": "^16.18.0",
     "jest": "^26.4.2",
     "ts-jest": "^26.3.0",
@@ -43,12 +43,13 @@
     "typescript": "^4.7.4"
   },
   "peerDependencies": {
+    "@apoyo/jwt": "^0.0.1",
     "@apoyo/std": "^0.0.15"
   },
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
-    "jsonwebtoken": "^9.0.0"
+    "aws-jwt-verify": "^4.0.0"
   }
 }
