--- a/packages/mailer/package.json
+++ b/packages/mailer/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@apoyo/std": "^0.0.15",
+    "@types/ejs": "^3.1.2",
     "@types/jest": "^26.0.23",
     "@types/jsonwebtoken": "^9",
     "@types/node": "^16.18.0",
@@ -52,6 +53,7 @@
     "access": "public"
   },
   "dependencies": {
+    "ejs": "^3.1.9",
     "nodemailer": "^6.9.1"
   }
 }
